# ShelfScout-PX4-ROS2-Digital-Twin

./: .gitignore  README.md  requirements.txt
.codex/: plan
config/: mission.yaml  mission1.yaml  mission_dark_drone1.yaml  mission_dark_drone2.yaml  mission_drone1.yaml  mission_drone1_east.yaml  mission_drone1_north.yaml  mission_drone2.yaml  mission_drone2_south.yaml  mission_drone2_west.yaml  mission_precomputed.yaml
config_mega_overrack_indoor/: mission_drone1_north_west.yaml  mission_drone2_north_east.yaml  mission_drone3_south_west.yaml  mission_drone4_south_east.yaml
docs/: README_legacy.md  ROS2_PX4_BRIDGING.md  architecture.md  environment_setup.md  foundations.md  fsm.md  launch_yaml.md  mission_language.md  mission_v1.md  mission_v1_backup.md  multidrone_migration.md  px4_gazebo_notes.md  quickstart.md  run_system.md  troubleshooting.md  uxrce_dds_px4_ros_bridge.md
ros2_ws/src/overrack_light_plugin/: CMakeLists.txt  package.xml
ros2_ws/src/overrack_light_plugin/src/: torch_light_plugin.cpp
ros2_ws/src/overrack_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/overrack_mission/overrack_mission/: __init__.py  mission_node.py  param_utils.py
ros2_ws/src/overrack_mission/overrack_mission/core/: __init__.py  bounds.py  controller.py  fsm.py  kpi.py  plan.py
ros2_ws/src/overrack_mission/overrack_mission/core/planning/: __init__.py  coverage_planner.py  precomputed_routes.py
ros2_ws/src/overrack_mission/overrack_mission/launch/: mission.sim.launch.py
ros2_ws/src/overrack_mission/overrack_mission/launch/experimental/: mapping_rtabmap.launch.py
ros2_ws/src/overrack_mission/overrack_mission/nodes/: __init__.py  inspection_node.py  metrics_node.py  mission_control_node.py  px4_param_node.py
ros2_ws/src/overrack_mission/overrack_mission/param/: sim.yaml  sim_multi.yaml
ros2_ws/src/overrack_mission/overrack_mission/px4io/: __init__.py  qos.py  setpoints.py  telemetry.py  topics.py
ros2_ws/src/overrack_mission/overrack_mission/px4io/actuators/: torch_controller.py
routes/: overrack_default.yaml
scripts/: .env.example  apply_patch_dds_topics.sh  apply_px4_sitl_multiple_run_patch.sh  launch_gazebo.sh  launch_px4_gazebo.sh  launch_px4_gazebo_multi.sh  (+8 more)
(+37 files in other folders)
