<?xml version="1.0"?>
<package format="3">
  <name>overrack_light_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo Classic model plugin that toggles the torch light via ROS 2.</description>
  <maintainer email="support@overrack.ai">Overrack Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
