<?xml version="1.0"?>
<package format="3">
  <name>overrack_mission</name>
  <version>0.1.0</version>
  <description>Waypoint mission runner built directly on px4_msgs topics.</description>
  <maintainer email="support@overrack.ai">Overrack Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>gazebo_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
